Bug 169291 - Solid grid in writer contains small gaps when scrolling slowly.
Summary: Solid grid in writer contains small gaps when scrolling slowly.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.1.1 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Grid-Helplines
  Show dependency treegraph
 
Reported: 2025-11-06 11:08 UTC by Tamás Zolnai
Modified: 2025-11-12 10:21 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screen recording showing the wrong behavior (1.43 MB, video/mp4)
2025-11-06 11:12 UTC, Tamás Zolnai
Details
Zoomed in screen shot showing the issue (9.86 KB, image/png)
2025-11-06 11:13 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2025-11-06 11:08:53 UTC
Description:
In Writer the grid functionality has the option to display solid grid instead of a grid of dots. If the distance between the dots are small enough Writer automatically switches to display a solid grid.

The problem is that when I scroll up and down on the page some white gaps appear on the grid solid line.

Steps to Reproduce:
1. Set grid options to the following
  * Resolution (both): 0.39"
  * Subdivision (both): 20
2. Set zoom level to 200%
  -> Grid should be displayed as solid lines (instead of points).
3. Slowly scroll up and down of the page

-> Small gaps appear on the solid lines of the grid.
3.

Actual Results:
Solid line grid is not displayed properly.

Expected Results:
Solid line grid should be displayed properly (continuous line).


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.1.1 (X86_64) / LibreOffice Community
Build ID: 580(Build:1)
CPU threads: 4; OS: Linux 6.16; UI render: default; VCL: kf6 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Tamás Zolnai 2025-11-06 11:12:37 UTC
Created attachment 203768 [details]
Screen recording showing the wrong behavior
Comment 2 Tamás Zolnai 2025-11-06 11:13:02 UTC
Created attachment 203769 [details]
Zoomed in screen shot showing the issue
Comment 3 Commit Notification 2025-11-07 12:59:02 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/87e2c1686a0566cffcd5185f52152efee4e44175

tdf#169291: Fix rendering of solid grid in Writer.

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.